# USAFA-Schedule-Generator

./: cal.ics  classes.py  main.py  pyproject.toml  pyrightconfig.json  schedule.py  soc.py
